--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <title>Test1</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div>
-            <img src="../img/abrazo.jpeg" alt="Dos boludos se abrazan">
+            <img src="./img/abrazo.jpeg" alt="Dos boludos se abrazan">
             <h1>Jappi berdey tu iu</h1>
             <p>Esto es todo lo que aprendí hasta ahora :P</p>
         </div>
